--- a/HTML/index.html
+++ b/HTML/index.html
@@ -3,10 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ambia's web page</title>
+    <title>shapes and div</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1></h1>
+    <h1>hi  i ambia</h1>
     <h2>now we discuss about html</h2>
+    <div id = "box1"></div>
+    <div id="box2"></div>
+
+        
 </body>
-</html>
+</html>  
